@@ -1,115 +1,228 @@
 package net.sf.jabref;
 
-import gnu.dtools.ritopt.BooleanOption;
-import gnu.dtools.ritopt.Options;
-import gnu.dtools.ritopt.StringOption;
+import net.sf.jabref.export.ExportFormats;
+import org.apache.commons.cli.*;
 
 public class JabRefCLI {
 
-    public final static String exportMatchesSyntax = "[".concat(Globals.lang("field")).concat("]")
-            .concat("searchTerm").concat(",").concat("outputFile").concat(": ").
-                    concat(Globals.lang("file")).concat("[,").concat(Globals.lang("exportFormat")).concat("]");
-
-    public final StringOption importFile, exportFile, exportPrefs, importPrefs, auxImExport, importToOpenBase,
-            fetcherEngine, exportMatches, defPrefs;
-
-    public final BooleanOption helpO, disableGui, blank, loadSess, showVersion, disableSplash;
-    public final Options options;
     private String[] leftOver;
+    private final CommandLine cl;
 
     public boolean isHelp() {
-        return helpO.isInvoked();
+        return cl.hasOption("help");
     }
 
     public boolean isShowVersion() {
-        return showVersion.isInvoked();
+        return cl.hasOption("version");
     }
 
     public boolean isDisableSplash() {
-        return disableSplash.isInvoked();
+        return cl.hasOption("nosplash");
     }
 
     public boolean isBlank() {
-        return blank.isInvoked();
+        return cl.hasOption("blank");
     }
 
     public boolean isLoadSession() {
-        return loadSess.isInvoked();
+        return cl.hasOption("loads");
     }
 
     public boolean isDisableGui() {
-        return disableGui.isInvoked();
-    }
-
-    public String getHelp() {
-        return options.getHelp();
+        return cl.hasOption("nogui");
     }
 
     public JabRefCLI(String[] args) {
-        importFile = new StringOption("");
-        exportFile = new StringOption("");
-        helpO = new BooleanOption();
-        disableGui = new BooleanOption();
-        disableSplash = new BooleanOption();
-        blank = new BooleanOption();
-        loadSess = new BooleanOption();
-        showVersion = new BooleanOption();
-        exportPrefs = new StringOption("jabref_prefs.xml");
-        importPrefs = new StringOption("jabref_prefs.xml");
-        defPrefs = new StringOption("");
-        auxImExport = new StringOption("");
-        importToOpenBase = new StringOption("");
-        fetcherEngine = new StringOption("");
-        exportMatches = new StringOption("");
 
-        options = new Options("JabRef ");
-        options.setVersion(GUIGlobals.version);
+        Options options = getOptions();
 
-        importFile.setDescription("imopoepuoeu"); //Globals.lang);
-        options.register("version", 'v',
-                Globals.lang("Display version"), showVersion);
-        options.register("nogui", 'n',
-                Globals.lang("No GUI. Only process command line options."), disableGui);
-        options.register("nosplash", 's',
-                Globals.lang("Do not show splash window at startup"), disableSplash);
-        options.register("import", 'i',
-                Globals.lang("Import file") + ": " + Globals.lang("filename")
-                        + "[,import format]", importFile
-        );
-        options.register("output", 'o',
-                Globals.lang("Output or export file") + ": " + Globals.lang("filename")
-                        + "[,export format]", exportFile
-        );
-        options.register("help", 'h',
-                Globals.lang("Display help on command line options"), helpO);
-        options.register("loads", 'l', Globals.lang("Load session"), loadSess);
-        options.register("prexp", 'x', Globals.lang("Export preferences to file"),
-                exportPrefs);
-        options.register("primp", 'p', Globals.lang("Import preferences from file"),
-                importPrefs);
-        options.register("prdef", 'd', Globals.lang("Reset preferences (key1,key2,... or 'all')"),
-                defPrefs);
-        options.register("aux", 'a',
-                Globals.lang("Subdatabase from aux") + ": " + Globals.lang("file") + "[.aux]" + "," + Globals.lang("new") + "[.bib]",
-                auxImExport);
-        options.register("blank", 'b', Globals.lang("Do not open any files at startup"), blank);
+        try {
+            this.cl = new DefaultParser().parse(options, args);
+            this.leftOver = cl.getArgs();
+        } catch (ParseException e) {
+            e.printStackTrace();
 
-        options.register("importToOpen", '\0', Globals.lang("Import to open tab"), importToOpenBase);
-
-        options.register("fetch", 'f', Globals.lang("Run Fetcher, e.g. \"--fetch=Medline:cancer\""), fetcherEngine);
-
-        options.register("exportMatches", 'm', exportMatchesSyntax, exportMatches);
-
-        options.setUseMenu(false);
-
-        parse(args);
+            this.printUsage();
+            throw new RuntimeException();
+        }
     }
 
-    private void parse(String[] args) {
-        leftOver = options.process(args);
+    public boolean isPreferencesExport() {
+        return cl.hasOption("prexp");
+    }
+
+    public String getPreferencesExport() {
+        return cl.getOptionValue("prexp", "jabref_prefs.xml");
+    }
+
+    public boolean isPreferencesImport() {
+        return cl.hasOption("primp");
+    }
+
+    public String getPreferencesImport() {
+        return cl.getOptionValue("primp", "jabref_prefs.xml");
+    }
+
+    public boolean isPreferencesReset() {
+        return cl.hasOption("prdef");
+    }
+
+    public String getPreferencesReset() {
+        return cl.getOptionValue("prdef");
+    }
+
+
+    public boolean isFileExport() {
+        return cl.hasOption("output");
+    }
+
+    public String getFileExport() {
+        return cl.getOptionValue("output");
+    }
+
+    public boolean isFileImport() {
+        return cl.hasOption("import");
+    }
+
+    public String getFileImport() {
+        return cl.getOptionValue("import");
+    }
+
+    public boolean isAuxImport() {
+        return cl.hasOption("aux");
+    }
+
+    public String getAuxImport() {
+        return cl.getOptionValue("aux");
+    }
+
+    public boolean isImportToOpenBase() {
+        return cl.hasOption("importToOpen");
+    }
+
+    public String getImportToOpenBase() {
+        return cl.getOptionValue("importToOpen");
+    }
+
+    public boolean isFetcherEngine() {
+        return cl.hasOption("fetch");
+    }
+
+    public String getFetcherEngine() {
+        return cl.getOptionValue("fetch");
+    }
+
+    public boolean isExportMatches() {
+        return cl.hasOption("exportMatches");
+    }
+
+    public String getExportMatches() {
+        return cl.getOptionValue("exportMatches");
+    }
+
+    private Options getOptions() {
+        Options options = new Options();
+
+        // boolean options
+        options.addOption("v", "version", false, Globals.lang("Display version"));
+        options.addOption("n", "nogui", false, Globals.lang("No GUI. Only process command line options."));
+        options.addOption("s", "nosplash", false, Globals.lang("Do not show splash window at startup"));
+        options.addOption("h", "help", false, Globals.lang("Display help on command line options"));
+        options.addOption("l", "loads", false, Globals.lang("Load session"));
+        options.addOption("b", "blank", false, Globals.lang("Do not open any files at startup"));
+
+        options.addOption(Option.builder("i").
+                longOpt("import").
+                desc(String.format("%s: %s[,import format]", Globals.lang("Import file"), Globals.lang("filename"))).
+                hasArg().
+                argName("FILE").build());
+
+        options.addOption(Option.builder("o").
+                longOpt("output").
+                desc(String.format("%s: %s[,export format]", Globals.lang("Output or export file"), Globals.lang("filename"))).
+                hasArg().
+                argName("FILE").
+                build());
+
+        options.addOption(Option.builder("x").
+                longOpt("prexp").
+                desc(Globals.lang("Export preferences to file")).
+                hasArg().
+                argName("FILE").
+                build());
+
+        options.addOption(Option.builder("p").
+                longOpt("primp").
+                desc(Globals.lang("Import preferences from file")).
+                hasArg().
+                argName("FILE").
+                build());
+        options.addOption(Option.builder("d").
+                longOpt("prdef").
+                desc(Globals.lang("Reset preferences (key1,key2,... or 'all')")).
+                hasArg().
+                argName("FILE").
+                build());
+
+        options.addOption(Option.builder("a").
+                longOpt("aux").
+                desc(String.format("%s: %s[.aux],%s[.bib]", Globals.lang("Subdatabase from aux"), Globals.lang("file"), Globals.lang("new"))).
+                hasArg().
+                argName("FILE").
+                build());
+
+        options.addOption(Option.builder().
+                longOpt("importToOpen").
+                desc(Globals.lang("Import to open tab")).
+                hasArg().
+                argName("FILE").
+                build());
+
+        options.addOption(Option.builder("f").
+                longOpt("fetch").
+                desc(Globals.lang("Run Fetcher, e.g. \"--fetch=Medline:cancer\"")).
+                hasArg().
+                argName("FILE").
+                build());
+
+        options.addOption(Option.builder("m").
+                longOpt("exportMatches").
+                desc(getExportMatchesSyntax()).
+                hasArg().
+                argName("FILE").
+                build());
+
+        return options;
+    }
+
+    public void displayVersion() {
+        System.out.println(getVersionInfo());
+    }
+
+    public void printUsage() {
+        String header = "";
+
+        String importFormats = Globals.importFormatReader.getImportFormatList();
+        String importFormatsList = String.format("%s:%n%s%n", Globals.lang("Available import formats"), importFormats);
+
+        String outFormats = ExportFormats.getConsoleExportList(70, 20, "");
+        String outFormatsList = String.format("%s: %s%n", Globals.lang("Available export formats"), outFormats);
+
+        String footer = "\n" + importFormatsList + outFormatsList + "\nPlease report issues at http://sourceforge.net/p/jabref/bugs/";
+
+        HelpFormatter formatter = new HelpFormatter();
+        formatter.printHelp("jabref [OPTIONS] [BIBTEX_FILE]\n\nOptions:", header, getOptions(), footer, true);
+    }
+
+    private String getVersionInfo() {
+        return String.format("JabRef %s", GUIGlobals.version);
     }
 
     public String[] getLeftOver() {
         return leftOver;
+    }
+
+    public static String getExportMatchesSyntax() {
+        return String.format("[%s]searchTerm,outputFile: %s[,%s]", Globals.lang("field"), Globals.lang("file"), Globals.lang("exportFormat"));
     }
 }
