@@ -13,6 +13,8 @@
     - Emacs keybindings: CTRL+f is not rebound as CTRL+f is more often used for "search"
     - Performance Improvement: Saving of large databases is dramatically faster
     - Jars that are available in maven are now downloaded and used in both ant and gradle
+    - Replaced option parsing library ritopt with apache commons-cli which is in maven repository
+    - BREAKING passing an option file to the cli command no longer works due to change of internal cli library!
 2.11 beta 2
     - Feature: Option to clean URLs generated by Google (patch #204)
     - Fix for bug #1272: JabRef now launches on Mac OS X
